<resources>
    <string name="app_name">DAM2_Parcial1</string>
    <string name="appTitle">MyDietPal</string>
    <string name="vegetarian_ivDescription">Vegetarian logo</string>
    <string name="tv_vegetarian">Vegetarian diet</string>
    <string name="vegan_ivDescription">Vegan diet logo</string>
    <string name="tv_vegan">Vegan diet</string>
    <string name="glutenFree_ivDescription">Gluten free diet logo</string>
    <string name="tv_glutenFree">Gluten free diet</string>
    <string name="ivItem_description">Descripcion de la imagen mostrada</string>
    <string name="tv_itemTitle">Item Title</string>
    <string name="caloriesText">Calories: 0</string>
    <string name="carbsText">Carbs: 0g</string>
    <string name="fatText">Fat: 0g</string>
    <string name="proteinText">Protein: 0g</string>
    <string name="go_back">Go Back</string>
</resources>